--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.9", default-features = false, features = []}
+tuple_utils = "*"
 
 [dev-dependencies]
 
