--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.10", default-features = false, features = []}
+bevy = { version = "0.10", default-features = false, features = ["bevy_ui", "bevy_text", "bevy_render", "bevy_asset"]}
 tuple_utils = "*"
 
 [dev-dependencies]
