get reactive expressions working again
Signed-off-by: lee-orr <lee-orr@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,10 @@
             "task": "Clippy & Fmt"
         },
         {
+            "label": "Test",
+            "task": "Test"
+        },
+        {
             "label": "Simple",
             "task": "Simple"
         },
