continue work towards if-else
Signed-off-by: lee-orr <lee-orr@users.noreply.github.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,6 +19,14 @@
 		},
 		{
 			"type": "shell",
+			"command": "cargo run --example if_expressions",
+			"problemMatcher": [
+				"$rustc"
+			],
+			"label": "If"
+		},
+		{
+			"type": "shell",
 			"command": "cargo clippy --fix --allow-dirty && cargo fmt",
 			"label": "Clippy & Fmt"
 		},
