--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,10 @@
         {
             "label": "Expressions",
             "task": "Expressions"
+        },
+        {
+            "label": "If",
+            "task": "If"
         }
     ]
 }
