start setting up for expressions
Signed-off-by: lee-orr <lee-orr@users.noreply.github.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,6 +19,14 @@
 		},
 		{
 			"type": "shell",
+			"command": "cargo run --example for_expressions",
+			"problemMatcher": [
+				"$rustc"
+			],
+			"label": "For"
+		},
+		{
+			"type": "shell",
 			"command": "cargo run --example if_expressions",
 			"problemMatcher": [
 				"$rustc"
