--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,10 @@
         {
             "label": "If",
             "task": "If"
+        },
+        {
+            "label": "For",
+            "task": "For"
         }
     ]
 }
