use enum instead of bool for string expression section
Signed-off-by: lee-orr <lee-orr@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1", features = ["derive"]}
 tuple_utils = "*"
 quick-xml = { version = "0.28", features = ["serialize"]}
 evalexpr = {version = "11", features = ["serde_support"]}
+rhai = { version = "1.14"}
 
 [dev-dependencies]
 
