--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,11 +3,11 @@
 	"tasks": [
 		{
 			"type": "shell",
-			"command": "cargo run --example simple",
+			"command": "cargo run -p ui-experiment --example simple",
 			"problemMatcher": [
 				"$rustc"
 			],
-			"label": "Simple"
+			"label": "Simple UI"
 		},
 		{
 			"type": "shell",
