--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,2 @@
-[package]
-name = "bevy-ecs-ui-experiment"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-bevy = { version = "0.11", default-features = false, features = [
-    "bevy_ui",
-    "bevy_text",
-    "bevy_render",
-    "bevy_asset",
-] }
-tuple_utils = "*"
-
-[dev-dependencies]
-
-bevy = { version = "0.11", default-features = true }
-bevy-inspector-egui = "*"
+[workspace]
+members = ["ui-experiment", "reload-macros", "hot-reload"]
