get app shell to load
Signed-off-by: lee-orr <lee-orr@users.noreply.github.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,14 @@
 		},
 		{
 			"type": "shell",
+			"command": "cargo run -p hot-reload --example simple",
+			"problemMatcher": [
+				"$rustc"
+			],
+			"label": "Simple Hot Reload"
+		},
+		{
+			"type": "shell",
 			"command": "cargo clippy --fix --allow-dirty && cargo fmt",
 			"label": "Clippy & Fmt"
 		}
