--- a/hot-reload/Cargo.toml
+++ b/hot-reload/Cargo.toml
@@ -6,4 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy_ecs = "0.11"
+bevy = { version = "0.11", default-features = false, features = ["bevy_winit"] }
+libloading = "0.8"
+reload-macros = { path = "../reload-macros" }
+
+[dev-dependencies]
+bevy = "0.11"
+bevy-inspector-egui = "*"
