--- a/hot-reload/Cargo.toml
+++ b/hot-reload/Cargo.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+bypass = ["reload-macros/bypass"]
+
 
 [dependencies]
 bevy = { version = "0.11", default-features = false, features = ["bevy_winit"] }
 libloading = "0.8"
 reload-macros = { path = "../reload-macros" }
-
-[dev-dependencies]
-bevy = "0.11"
-bevy-inspector-egui = "*"
