--- a/hot_reload_example/Cargo.toml
+++ b/hot_reload_example/Cargo.toml
@@ -14,3 +14,4 @@ crate-type = ["rlib", "dylib"]
 bevy = { version = "0.11" }
 bevy-inspector-egui = "*"
 hot-reload = { path = "../hot-reload", features = [] }
+serde = "*"
