--- a/hot-reload/Cargo.toml
+++ b/hot-reload/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-bypass = ["reload-macros/bypass"]
+hot = ["reload-macros/hot"]
 
 
 [dependencies]
