got hot and cold features working
Signed-off-by: lee-orr <lee-orr@users.noreply.github.com>

--- a/hot_reload_example/Cargo.toml
+++ b/hot_reload_example/Cargo.toml
@@ -13,5 +13,5 @@ crate-type = ["rlib", "dylib"]
 
 bevy = { version = "0.11" }
 bevy-inspector-egui = "*"
-hot-reload = { path = "../hot-reload", features = [] }
+hot-reload = { path = "../hot-reload", features = ["hot"] }
 serde = "*"
