move initial plugins
Signed-off-by: lee-orr <lee-orr@users.noreply.github.com>

--- a/hot-reload/Cargo.toml
+++ b/hot-reload/Cargo.toml
@@ -17,7 +17,7 @@ libloading = "0.8"
 reload-macros = { path = "../reload-macros" }
 crossbeam = "0.8"
 tempfile = "3"
-uuid = "*"
+uuid = "1"
 bevy_hot_winit = { path = "../bevy_hot_winit" }
-serde = "*"
-rmp-serde = "*"
+serde = "1"
+rmp-serde = "1"
