--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,3 @@
 [workspace]
 resolver = "2"
-members = [
-    "ui-experiment",
-    "reload-macros",
-    "hot-reload",
-    "hot_reload_example",
-    "bevy_hot_winit",
-]
+members = ["ui-experiment"]
